syntax = "proto3";

option java_multiple_files = true;
option java_package = "cz.muni.fi.proto";
option java_outer_classname = "FlightCancellationProto";

package grpc;

service FlightCancellation {
    rpc CancelFlight(FlightCancellationRequest) returns (FlightCancellationResponse) {}
}

message FlightCancellationRequest {
    int32 id = 1;
    string reason = 2;
}

message FlightCancellationResponse {
    string status = 1;
}